--- a/petlog-api/src/main/resources/application-local.yml
+++ b/petlog-api/src/main/resources/application-local.yml
@@ -1,3 +1,5 @@
+project:
+  version: v1
 spring:
   datasource:
     url: jdbc:h2:mem:test
@@ -15,4 +17,3 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-
