--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 !/gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+src/main/resources/jasypt-encryptor-password.txt
 
 ### STS ###
 .apt_generated
