--- a/petlog-api/src/main/resources/application-dev.yml
+++ b/petlog-api/src/main/resources/application-dev.yml
@@ -5,6 +5,10 @@ project:
   version: v1
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/petlog?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
