--- a/petlog-api/src/test/resources/application.yml
+++ b/petlog-api/src/test/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       port: 6379
       password: pwd
   datasource:
-    url: jdbc:h2:mem:test
+    url: jdbc:h2:mem:test;NON_KEYWORDS=USER
     username: sa
     password:
     driver-class-name: org.h2.Driver
