--- a/petlog-api/src/main/resources/application-dev.yml
+++ b/petlog-api/src/main/resources/application-dev.yml
@@ -27,6 +27,11 @@ spring:
     redis:
       password: ENC("m9TfKIXK76S38gkq/ZEWVh1x1uCGakwC")
       timeout: 600ms
+    elasticsearch:
+      repositories:
+        enabled: true
+  elasticsearch:
+    uris: ENC("YDmbn+FWIxxbE1Xh1W0h1KmfYAZR6TQYOGi8P+iIFd8=")
 cloud:
   aws:
     s3:
