hotfix: fix the error that could not connect elastic search on develop server

--- a/petlog-api/src/main/resources/application-dev.yml
+++ b/petlog-api/src/main/resources/application-dev.yml
@@ -27,6 +27,11 @@ spring:
     redis:
       password: ENC("m9TfKIXK76S38gkq/ZEWVh1x1uCGakwC")
       timeout: 600ms
+    elasticsearch:
+      repositories:
+        enabled: true
+  elasticsearch:
+    uris: ENC("l0MJt1A65l7QUq/zekWrSJCX51y3uR3caCZLYm3wroU=")
 cloud:
   aws:
     s3:
