--- a/petlog-api/src/main/resources/application-local.yml
+++ b/petlog-api/src/main/resources/application-local.yml
@@ -7,8 +7,8 @@ project:
 spring:
   servlet:
     multipart:
-      max-file-size: 50MB
-      max-request-size: 50MB
+      max-file-size: 100MB
+      max-request-size: 100MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/petlog?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul
@@ -67,3 +67,6 @@ jasypt:
     pool-size: 2
     string-output-type: base64
     key-obtention-iterations: 10000
+
+ffmpeg:
+  path: /opt/homebrew/bin
