--- a/petlog-api/src/test/resources/application.yml
+++ b/petlog-api/src/test/resources/application.yml
@@ -5,7 +5,7 @@ storage:
 spring:
   data:
     redis:
-      password: 1234
+      password: ${{ secrets.REDIS_TEST_PASSWORD }}
   datasource:
     url: jdbc:h2:mem:test;NON_KEYWORDS=USER
     username: sa
