--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,7 +3,8 @@ name: Java CICD with Gradle
 on:
   push:
     branches: [ "develop" ]
-
+  pull_request:
+    branches: [ "develop" ]
 jobs:
   build:
     runs-on: ubuntu-latest
