--- a/petlog-api/src/main/resources/application-local.yml
+++ b/petlog-api/src/main/resources/application-local.yml
@@ -72,3 +72,20 @@ jasypt:
 
 ffmpeg:
   path: /opt/homebrew/bin
+
+mail:
+  host: smtp.gmail.com
+  port: 587
+  username: llsrrll758@gmail.com
+  password: ENC("JYwzZQLUyPlH2kQf59qHJSi/fBvnCP+m79/zm8mR0JY=")
+  properties:
+    mail:
+      smtp:
+        auth: true
+        starttls:
+          enable: true
+          required: true
+        connectiontimeout: 5000
+        timeout: 5000
+        writetimeout: 5000
+  auth-code-expiration-millis: 600000  # 10 * 60 * 1000 == 10분
