--- a/petlog-api/src/main/resources/application-dev.yml
+++ b/petlog-api/src/main/resources/application-dev.yml
@@ -71,8 +71,8 @@ ffmpeg:
 mail:
   host: smtp.gmail.com
   port: 587
-  username: llsrrll758@gmail.com
-  password: ENC("JYwzZQLUyPlH2kQf59qHJSi/fBvnCP+m79/zm8mR0JY=")
+  username: mypetlog.contact@gmail.com
+  password: ENC("ImzLNPu/XNXnIS4SJXbR4UIfE9HMfqm0NmaEQ4Am7Q0=")
   properties:
     mail:
       smtp:
